--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
 			<nav class="navbar">
 				<a href="file:///C:/" classs="nav-branding">DEV.</a>
 				<ul class="nav-menu">
-					<li class="nav-link"><a href=":file:///C:/Users/someb/OneDrive/Desktop/website%202/index.html">Home</a></li>
-					<li class="nav-link"><a href=":file:///C:/Users/someb/OneDrive/Desktop/website%202/about.html">About</a></li>
-					<li class="nav-link"><a href=":file:///C:/Users/someb/OneDrive/Desktop/website%202/blog.html">Blog</a></li>
+					<li class="nav-link"><a href="https://atmadness.github.io">Home</a></li>
+					<li class="nav-link"><a href="https://atmadness.github.io">About</a></li>
+					<li class="nav-link"><a href="https://atmadness.github.io">Blog</a></li>
 				</ul>
 			</nav>
 		</div>
