--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 			<nav class="navbar">
 				<a href="file:///C:/" classs="nav-branding">DEV.</a>
 				<ul class="nav-menu">
-					<li class="nav-link"><a href="https://atmadness.github.io/">Home</a></li>
-					<li class="nav-link"><a href="https://atmadness.github.io/about/">About</a></li>
-					<li class="nav-link"><a href="https://atmadness.github.io/blog/">Blog</a></li>
+					<li class="nav-link"><a href="https://atmadness.github.io">Home</a></li>
+					<li class="nav-link"><a href="https://atmadness.github.io">About</a></li>
+					<li class="nav-link"><a href="https://atmadness.github.io">Blog</a></li>
 				</ul>
 			</nav>
 		</div>
