--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
 	<header>
 		<div class="container">
 			<nav class="navbar">
-				<a href="/" classs="nav-branding">DEV.</a>
+				<a href="https://atmadness.github.io/" classs="nav-branding">DEV.</a>
 				<ul class="nav-menu">
 					<li class="nav-link"><a href="https://atmadness.github.io">Home</a></li>
 					<li class="nav-link"><a href="https://atmadness.github.io">About</a></li>
